# big-factorial

./: CMakeLists.txt  LICENSE  README.md
inc/: factorize.hpp
inc/math/: log.hpp
src/: factorize.cpp
src/demo/: factor-int.cpp
test/: CMakeLists.txt
test/src/: logtest.cpp
